# pipemind-marketplace

./: BOOTSTRAP-REFERENCE.md  CLAUDE.md  GETTING_STARTED.md  README.md  TODO.md  analysis.md  bootstrap-agentic.sh  install.sh  marketplace.json  release.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: builder.md  planner.md
.github/workflows/: release.yml
docs/: architecture.md  getting-started.md  index.md  tech-stack.md  workflow.md
plugins/mcp-semantic-scholar/: .gitignore  Cargo.toml  README.md
plugins/mcp-semantic-scholar/.claude-plugin/: plugin.json
plugins/mcp-semantic-scholar/specs/: glossary.md  mcp-semantic-scholar.md
plugins/mcp-semantic-scholar/src/: api.rs  format.rs  lib.rs  main.rs  server.rs  types.rs
plugins/mcp-semantic-scholar/tests/: integration.rs  startup.rs
plugins/pm-workflow/: README.md  plugin.json
plugins/scientific-method/: .gitignore  README.md
plugins/spec-driven-development/: CLAUDE.md  README.md
plugins/typescript-lsp/: .lsp.json
scripts/: new-task.sh  validate-task.py
specs/: glossary.md  pm-workflow.compilation.md  pm-workflow.execution.md  pm-workflow.installation.md  pm-workflow.specification.md  scientific-method.md  spec-driven-development.compilation.md  spec-driven-development.execution.md  spec-driven-development.installation.md
templates/: README.md  tasks-000-example-task.md  tasks-README.md  tasks-TEMPLATE.md
tmp/bizarre-stars-agents/: builder.md
tmp/event-app-agents/: builder.md  devops.md  planner.md  security.md
tmp/lbazaar-agents/: builder.md  devops.md  (+2 more)
(+124 files in other folders)
