[package]
name = "mcp-semantic-scholar"
version = "0.1.0"
edition = "2021"
publish = false
description = "MCP server wrapping the Semantic Scholar API for academic paper search and citation graphs"
license = "MIT"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[lib]
name = "mcp_semantic_scholar"
path = "src/lib.rs"

[[bin]]
name = "mcp-semantic-scholar"
path = "src/main.rs"
